--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,17 +6,16 @@ stages:
 variables:
   VENDOR_PATH: "/go/src/github.com/influxdata"
   PROJECT_NAME: "telegraf"
-  BIN_DIR: "bin"
+  TARGET_DIR: "pinot-distribution/target/pinot-*-pkg"
+  ARTIFACT_DIR: "artifact"
 
 build:
   stage: build
   script:
-  - mvn install package -Dlicense.skip=true -DskipTests -Pbuild-shaded-jar
-  - mkdir ${BIN_DIR}
-  - cp pinot-distribution/target/pinot-*-pkg/* ${BIN_DIR}
+  - mvn clean package -Dlicense.skip=true -DskipTests -Pbuild-shaded-jar
+  - mkdir ${ARTIFACT_DIR}
+  - cp -r ${TARGET_DIR}/bin ${TARGET_DIR}/conf ${TARGET_DIR}/lib ${ARTIFACT_DIR}/
   
   artifacts:
     paths:
-      - ${BIN_DIR}
-
-
+      - ${ARTIFACT_DIR}
