use zip pkg as artifact directly

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,15 +7,12 @@ variables:
   VENDOR_PATH: "/go/src/github.com/influxdata"
   PROJECT_NAME: "telegraf"
   TARGET_DIR: "pinot-distribution/target"
-  ARTIFACT_DIR: "artifact"
 
 build:
   stage: build
   script:
   - mvn clean package -Dlicense.skip=true -DskipTests -Pbuild-shaded-jar
-  - mkdir ${ARTIFACT_DIR}
-  - cp ${TARGET_DIR}/pinot-*-pkg.zip ${ARTIFACT_DIR}
   
   artifacts:
     paths:
-      - ${ARTIFACT_DIR}
+      - ${TARGET_DIR}/pinot-*-pkg.zip
