--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 image: eu.gcr.io/ligatus-prod-public-registry/generic-build-agent:latest
 
 variables:
-  ARTIFACT_DIR = 'artifact'
+  ARTIFACT_DIR: 'artifact'
 
 stages:
   - build
@@ -10,7 +10,6 @@ build:
   stage: build
   script:
   - mvn clean package -Dlicense.skip=true -DskipTests -Pbuild-shaded-jar
-  
   - mv pinot-distribution/target/pinot-*-pkg.zip $ARTIFACT_DIR/pinot-pkg.zip
   
   artifacts:
