--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,7 @@ build:
   stage: build
   script:
   - mvn clean package -Dlicense.skip=true -DskipTests -Pbuild-shaded-jar
+  - mkdir $ARTIFACT_DIR
   - mv pinot-distribution/target/pinot-*-pkg.zip $ARTIFACT_DIR/pinot-pkg.zip
   
   artifacts:
