--- a/pom.xml
+++ b/pom.xml
@@ -823,6 +823,7 @@
           <configuration>
             <source>${jdk.version}</source>
             <target>${jdk.version}</target>
+            <compilerArgument>-XDignore.symbol.file</compilerArgument>
           </configuration>
         </plugin>
         <plugin>
